hphp/test/slow/parser/php-reserved-name-resource-2.php.expectf
Fatal error: Cannot use 'HH\Resource' as class name as it is reserved in %s on line 4
